# Rust-Playground

./: .gitignore  README.md
bdk-rs/: Cargo.toml
bdk-rs/src/: main.rs
idiomatic-rust/: Cargo.toml
idiomatic-rust/src/: lib.rs  main.rs
lets_get_rusty/: Cargo.toml
lets_get_rusty/src/: chapter3.rs  chapter4_ownership.rs  lib.rs  main.rs
mb-reports-gen/: Cargo.toml
mb-reports-gen/src/: main.rs  types.rs
mb-rs/: .env  .gitignore  Cargo.toml
mb-rs/src/: lib.rs
mb-rs/src/schema/: alternative_medium.rs  alternative_medium_db_set.rs  alternative_medium_track.rs  alternative_medium_track_db_set.rs  alternative_release.rs  alternative_release_db_set.rs  alternative_release_type.rs  alternative_release_type_db_set.rs  alternative_track.rs  alternative_track_db_set.rs  annotation.rs  annotation_db_set.rs  application.rs  application_db_set.rs  area.rs  area_alias.rs  area_alias_db_set.rs  area_alias_type.rs  area_alias_type_db_set.rs  area_annotation.rs  area_annotation_db_set.rs  area_attribute.rs  area_attribute_db_set.rs  area_attribute_type.rs  area_attribute_type_allowed_value.rs  area_attribute_type_allowed_value_db_set.rs  area_attribute_type_db_set.rs  area_containment.rs  area_containment_db_set.rs  area_db_set.rs  area_gid_redirect.rs  area_gid_redirect_db_set.rs  area_tag.rs  area_tag_db_set.rs  area_tag_raw.rs  area_tag_raw_db_set.rs  area_type.rs  area_type_db_set.rs  artist.rs  artist_alias.rs  (+725 more)
mb-rs/src/schema/types/: mod.rs
mbdata-rs/: Cargo.toml
mbdata-rs/src/: main.rs
mbdata-rs/src/entities/: mod.rs
mbdata-rs/src/migrator/: mod.rs
mbdata-rs/src/src/entities/: mod.rs  prelude.rs
meth/: Cargo.toml
meth/src/: lib.rs  main.rs
meth/tests/: meth_test.rs
pollers/: Cargo.toml
pollers/src/: main.rs
raxum/: Cargo.toml
raxum/src/: data.rs  handlers.rs  main.rs  router.rs
rest/src/: lib.rs  main.rs
river/: 404.html  Cargo.toml  index.html
river/src/: lib.rs
rustbrainz/: .env  Cargo.toml
rustbrainz/src/: main.rs
sea-orm-playground/: Cargo.toml
sea-orm-playground/src/: main.rs
sea-orm-playground/src/entities/: bakery.rs  chef.rs  customer.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs
sea-orm-playground/src/migrator/: m20240105_000001_create_bakery_table.rs  m20240501_000002_create_chef_table.rs  mod.rs
snaky/: Cargo.toml
snaky/src/: main.rs
sql-db-mapper-playground/: .env  Cargo.toml
tokios/: Cargo.toml
tokios/examples/: main.rs
tokios/src/: main.rs
