[package]
name = "mb-reports-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.36.0", features = ["full"]}
sqlx = {version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "sqlx-postgres", "runtime-tokio"]}

[dependencies.mb-rs]
path = "../mb-rs"
