[package]
name = "mb-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version =  "0.7.3", features = ["postgres", "uuid", "json", "runtime-tokio","any", "chrono","default"] }
serde_json = { version = "1.0", features = ["raw_value"] }
chrono = "0.4.34"
uuid = { version = "1.7.0", features = ["v4"] }
