[package]
name = "pollers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.10"
tokio = {version = "1.36.0", features = ["full"]}
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres"]}
futures = "0.3.30"
