[package]
name = "raxum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {features = ["full"], version = "1.36.0"}
axum = "0.7.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
cronjob = "0.4.17"
tower = "0.4.13"
tower-http = "0.5.2"
sqlx = {version = "0.7.4", features = ["postgres", "sqlx-postgres", "runtime-tokio"]}


[dev-dependencies]
anyhow = "1.0.81"
