[package]
name = "rustbrainz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {features = ["full"], version = "1.36.0"}
reqwest = "0.11.26"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

