[package]
name = "sea-orm-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.10", features = [
  "sqlx-postgres",
  "runtime-async-std-native-tls",
  "macros",
] }
futures = "0.3.30"
sea-orm-migration = "^0.12.10"
